<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.sonatype.buildsupport</groupId>
        <artifactId>buildsupport</artifactId>
        <version>41</version>
    </parent>

    <groupId>ognl</groupId>
    <artifactId>ognl</artifactId>
    <packaging>jar</packaging>
    <version>3.4.3-SNAPSHOT</version>
    <name>OGNL - Object Graph Navigation Library</name>
    <description>OGNL - Object Graph Navigation Library</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>

        <public.serverId>ossrh</public.serverId>
        <public.nexusUrl>https://oss.sonatype.org</public.nexusUrl>
        <public-release.serverId>ossrh</public-release.serverId>
        <public-release.url>https://oss.sonatype.org/service/local/staging/deploy/maven2</public-release.url>
        <public-snapshot.serverId>ossrh</public-snapshot.serverId>
        <public-snapshot.url>https://oss.sonatype.org/content/repositories/snapshots</public-snapshot.url>
        <junit.version>5.10.1</junit.version>
    </properties>

    <inceptionYear>2022</inceptionYear>

    <url>https://github.com/orphan-oss/ognl/orphan/ognl/</url>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git@github.com:orphan-oss/ognl.git</connection>
        <url>git@github.com:orphan-oss/ognl.git</url>
        <developerConnection>scm:git:git@github.com:orphan-oss/ognl.git</developerConnection>
      <tag>HEAD</tag>
  </scm>

    <issueManagement>
        <system>Github Issues</system>
        <url>https://github.com/orphan-oss/ognl/issues</url>
    </issueManagement>

    <developers>
        <developer>
            <id>lukaszlenart</id>
            <email>lukasz.lenart@gmail.com</email>
            <roles>
                <role>Lead maintainer</role>
            </roles>
        </developer>
    </developers>

    <dependencies>
        <dependency>
            <groupId>org.javassist</groupId>
            <artifactId>javassist</artifactId>
            <version>3.29.2-GA</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.vintage</groupId>
            <artifactId>junit-vintage-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.24.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.easymock</groupId>
            <artifactId>easymock</artifactId>
            <version>5.2.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <executions>
                    <execution>
                        <id>compile-tests</id>
                        <phase>process-test-sources</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                        <configuration>
                            <source>${maven.compiler.source}</source>
                            <target>${maven.compiler.target}</target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <includes>
                        <include>**/*Test.java</include>
                        <include>**/TestOgnlRuntime.java</include>
                        <include>**/TestOgnlException.java</include>
                        <include>**/TestExpressionCompiler.java</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <compress>true</compress>
                        <index>true</index>
                        <manifestEntries>
                            <Automatic-Module-Name>ognl</Automatic-Module-Name>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <configuration>
                    <archive>
                        <compress>true</compress>
                        <index>true</index>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.2</version>
                <configuration>
                    <archive>
                        <compress>true</compress>
                        <index>true</index>
                    </archive>
                    <source>1.8</source>
                    <links>
                        <link>https://docs.oracle.com/javase/8/docs/api/</link>
                    </links>
                    <doclint>none</doclint>
                    <quiet>true</quiet>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>javacc-maven-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>ognl-jjtree</id>
                        <phase>generate-sources</phase>
                        <configuration>
                            <outputDirectory>${project.build.directory}/generated-sources/java</outputDirectory>
                            <lookAhead>1</lookAhead>
                            <isStatic>false</isStatic>
                            <javaUnicodeEscape>true</javaUnicodeEscape>
                            <unicodeInput>true</unicodeInput>
                            <!-- Uncomment if AST files needs to be generated
                            <nodePackage>*.jtree</nodePackage>
                             -->
                            <!-- Uncomment if visitor default implementation needs to be generated
                            <visitor>true</visitor>
                            -->
                        </configuration>
                        <goals>
                            <!-- change goal to jtree-javacc to generate AST too -->
                            <goal>javacc</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <defaultGoal>install</defaultGoal>

    </build>

    <profiles>
        <profile>
            <id>jdk17</id>
            <activation>
                <jdk>[17,)</jdk>
            </activation>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-surefire-plugin</artifactId>
                            <configuration>
                                <argLine>
                                    --illegal-access=permit
                                    --add-opens java.base/java.lang=ALL-UNNAMED
                                    --add-opens java.base/java.util=ALL-UNNAMED
                                    -Dillegal-access=permit
                                </argLine>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
        <profile>
            <id>coverage</id>
            <properties>
                <sonar.host.url>https://sonarcloud.io</sonar.host.url>
                <sonar.organization>orphan-oss</sonar.organization>
                <sonar.projectKey>orphan-oss_ognl</sonar.projectKey>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>0.8.11</version>
                        <executions>
                            <execution>
                                <id>prepare-agent</id>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>report</id>
                                <goals>
                                    <goal>report</goal>
                                </goals>
                                <configuration>
                                    <formats>
                                        <format>XML</format>
                                    </formats>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
